fix login and registration
clean code and don't lose state is logged after refresh

--- a/index.scss
+++ b/index.scss
@@ -13,3 +13,15 @@ body {
   grid-template-rows: auto 1fr auto;
   grid-template-columns: minmax(0, 1fr);
 }
+
+/*
+Light mode
+# f38181
+# fce38a
+# 95e1d3
+
+Dark mode
+# ff7f50
+# 404969
+# bde4f4
+*/
