--- a/pages/auth/login/login.scss
+++ b/pages/auth/login/login.scss
@@ -1,55 +1,58 @@
-.login-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.login-container-wrapper{
-    display: flex;
-    gap: 5rem;
+.login-container-wrapper {
+  display: flex;
+  gap: 5rem;
 }
-.login-form{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
-.login-form-email-wrapper, .login-form-password-wrapper{
-    display: flex;
-    flex-direction: column;
+.login-form-email-wrapper,
+.login-form-password-wrapper {
+  display: flex;
+  flex-direction: column;
 }
-.login-form-button-sign-in{
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    background-color: #1e90ff;
-    color: white;
-    margin-bottom: 10px
+.login-form-button-sign-in {
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #1e90ff;
+  color: white;
+  margin-bottom: 10px;
 }
-.login-form-button{
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid grey;
-    background-color: white;
-}
-
-.img-google{
-    width: 20px;
-    margin-right: 10px;
+.login-form-button {
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid grey;
+  background-color: white;
 }
 
-.login-failed, .login-oauth2-failed{
-    color: red;
-    font-size: 1.3rem;
+.img-google {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.login-failed,
+.login-oauth2-failed {
+  color: red;
+  font-size: 1.2rem;
+  max-width: 15rem;
 }
 
 @media (max-width: 768px) {
-    .login-container-wrapper{
-        display: flex;
-        flex-direction: column;
-        flex-direction: column-reverse;
-        width: 90%;
-    }
+  .login-container-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    width: 90%;
+  }
 }
