add detail content
I still need to add the comment and for tv show add episodes and series

--- a/components/singleCard/singleCard.scss
+++ b/components/singleCard/singleCard.scss
@@ -1,9 +1,14 @@
-.home-view-single-card{
-  width: 10rem;
+.home-view-single-card-link-wrapper,
+.home-view-single-card-link-wrapper:hover {
+  text-decoration: none;
+  color: inherit;
+}
+.home-view-single-card {
   background-color: #e5e8ee;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 .poster-rate-title > img {
   width: 100%;
@@ -25,13 +30,13 @@
   margin-bottom: 10px;
   border-radius: 10px;
 }
-.home-view-card-button:hover{
+.home-view-card-button:hover {
   opacity: 0.9;
 }
 .fa-play {
   color: white;
 }
-.fa-play:hover{
+.fa-play:hover {
   cursor: pointer;
 }
 .home-view-card-button > button {
@@ -40,9 +45,6 @@
   color: white;
 }
 @media (max-width: 768px) {
-.home-view-single-card{
-  width: 7rem;
-}
 .poster-rate-title > img {
   width: 100%;
   height: 200px;
