CLEAN code move in a component the table for better reading

--- a/pages/dashboard/contentManager/contentManager.scss
+++ b/pages/dashboard/contentManager/contentManager.scss
@@ -5,160 +5,26 @@
   width: 90%;
   margin: auto;
 }
-.content-manager-table-pagination {
-  width: 90%;
-}
-.content-manager-table-title-actions{
-  display: flex;
-  justify-content: space-between;
-}
-.content-manager-table-actions {
-  display: flex;
-  align-items: center;
-  gap: 35px;
-}
-.content-manager-table-actions > div {
-  border: 1px solid rgb(192, 192, 192);
-  border-radius: 12px;
-  padding: 5px 15px 5px 15px;
-  display: flex;
-  align-items: center;
-  transition: box-shadow 0.2s ease, border-color 0.2s ease;
-}
 
-
-.content-manager-table-filters{
-    border: 1px solid red;
+.show-modal-insert-new-movie {
+  background-color: #f8f9fa;
+  border: 2px solid #5a5a5a;
+  color: black;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 95%;
+  overflow-y: auto;
+  padding: 20px;
 }
-//Toggle
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 24px;
-  margin-left: 10px;
+.modal-insert-new-movie-hide {
+  display: none;
 }
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.modal-insert-new-movie-show {
+  display: block;
 }
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 16px; width: 16px;
-  left: 4px; bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #4CAF50;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-//end toggle
-
-th {
-  background-color: #f2f2f2;
-  height: 80px;
-}
-td {
-  height: 80px;
-}
-
-.content-manager-table th:nth-child(1),
-.content-manager-table td:nth-child(1) {
-  width: 15%; /* Movie Title */
-  padding-left: 5px;
-}
-
-.content-manager-table th:nth-child(2),
-.content-manager-table td:nth-child(2) {
-  width: 5%; /* Language */
-}
-
-.content-manager-table th:nth-child(3),
-.content-manager-table td:nth-child(3) {
-  width: 10%; /* Release Date */
-}
-
-.content-manager-table th:nth-child(4),
-.content-manager-table td:nth-child(4) {
-  width: 10%; /* Status */
-}
-
-.content-manager-table th:nth-child(5),
-.content-manager-table td:nth-child(5) {
-  width: 3%; /* Actions */
-}
-.content-manager-table tr:nth-child(even) {
-  background-color: #e5ebe5;
-}
-.content-manager-table tr:nth-child(odd) {
-  background-color: #ffffff;
-}
-.content-manager-title-img {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.content-manager-title-img > img {
-  width: 65px;
-  height: 65px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-.content-manager-button-action {
-  display: flex;
-  justify-content: space-around;
-}
-.content-manager-pen:hover {
-  color: blue;
-}
-.content-manager-trash:hover {
-  color: red;
-}
-
-.content-manager-pagination {
-  display: flex;
-  justify-content: space-between;
-}
-.content-manager-pagination {
-  margin-top: 10px;
-}
-.content-manager-pagination-button {
-  display: flex;
-  gap: 30px;
-}
-.content-manager-pagination-button > div {
-  border: 1px solid grey;
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.content-manager-pagination-button > i {
-  font-size: 1.4rem;
-}
-.content-manager-pagination-button > div:hover {
-  cursor: pointer;
-  background-color: #e5ebe5;
+.insert-new-movie {
+  top: 0;
 }
