--- a/components/contentManagerTable/contentManagerTable.scss
+++ b/components/contentManagerTable/contentManagerTable.scss
@@ -166,6 +166,15 @@ td {
   padding-left: 10px;
   padding-right: 10px;
 }
+.content-manager-button-action > a {
+  all: unset;
+}
+.content-manager-button-action > a:hover {
+  cursor: pointer;
+}
+.content-manager-button-action > i:hover {
+ cursor: pointer;
+}
 .content-manager-pen:hover {
   color: blue;
 }
