FIX dashboard, and some refactoring code

--- a/components/infoMovie/infoMovie.scss
+++ b/components/infoMovie/infoMovie.scss
@@ -26,9 +26,10 @@
   margin-right: 15px;
   text-decoration: underline;
   color: white;
+  cursor: pointer;
 }
 .detail-page-info-genres-link:hover {
-  color: black;
+  color: white;
 }
 .detail-page-wrapper-button {
   display: flex;
