--- a/components/singleCard/singleCard.scss
+++ b/components/singleCard/singleCard.scss
@@ -12,7 +12,7 @@
 }
 .poster-rate-title > img {
   width: 100%;
-  height: 240px;
+  height: auto;
   object-fit: cover;
 }
 .home-view-single-title-card {
