--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -33,4 +33,8 @@
     .button-log-in{
         margin-top: 20px;
     }
+    .dashboard-log-out {
+        display: flex;
+        flex-direction: column;
+    }
 }
