FIX Archive and css in other pages

--- a/pages/pagination/pagination.scss
+++ b/pages/pagination/pagination.scss
@@ -23,6 +23,11 @@
   justify-content: space-between;
 }
 
+.no-data-present {
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   .pagination-title {
     font-size: 2rem;
