--- a/components/modalFilter/modalFilter.scss
+++ b/components/modalFilter/modalFilter.scss
@@ -6,7 +6,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 30%;
+  width: 60%;
   height: 95%;
   overflow-y: auto;
   padding: 20px;
@@ -65,6 +65,7 @@
   border-radius: 50px;
   background-color: #1e90ff;
   color: white;
+  margin-bottom: 1rem ;
 }
 .modal-filter-button-close {
   margin-right: 20px;
