--- a/components/slider/slider.scss
+++ b/components/slider/slider.scss
@@ -8,12 +8,14 @@
   width: 100%;
   height: 500px;
   object-fit: cover;
+  object-position: top center;
 }
 .home-information-slider {
   display: flex;
   align-items: center;
   padding: 20px;
   position: absolute;
+  width: 100%;
   bottom: 0;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
